--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d dist --dotfiles"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.3.1",
+    "@emailjs/browser": "^4.4.1",
     "@next/third-parties": "^14.1.3",
     "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
